tests/cases/fail/list_union_type.p4
def main() -> None:
    xs: list[int] | int = list_int()
